--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,3 +14,4 @@
 @use 'chunks/dashboard/reviews';
 @use 'chunks/dashboard/faq';
 @use 'chunks/dashboard/comand';
+@use 'chunks/dashboard/contacts';
