--- a/templates/dashboard/comand.html
+++ b/templates/dashboard/comand.html
@@ -118,7 +118,7 @@
             </svg>
           </div>
         </div>
-        <a href="" class="comand__invite-action">
+        <a href="#dashform" class="comand__invite-action">
           Оставить заявку
         </a>
       </div>
