--- a/templates/dashboard/contacts.html
+++ b/templates/dashboard/contacts.html
@@ -7,7 +7,7 @@
           Контакты
         </h2>
         <div class="contacts__info-text">
-          Мы работаем без выходных с 09:00 до 20:00.
+          Мы работаем без выходных с 09:00 до 20:00. <br />
           Обсудим ваш проект — напишите или позвоните нам:
         </div>
         <div class="contacts__list">
@@ -15,29 +15,42 @@
             <svg class="icon" width="24" height="24">
               <use href="/images/sprite.svg#phone" fill="currentColor"></use>
             </svg>
-            +7 (967) 355 39 39 +7 (905) 240 60 60
+            <a href="tel:+796735539 ">
+              +7 (967) 355 39 39
+            </a>
+            <a href="tel:+79052406060">
+              +7 (905) 240 60 60
+            </a>
           </div>
           <div class="contacts__item">
             <svg class="icon" width="24" height="24">
-              <use href="/images/sprite.svg#mail" fill="currentColor"></use>
+              <use href="/images/sprite.svg#mail-black" fill="currentColor"></use>
             </svg>
-            mirremonta-39@yandex.ru
+            <a href="mailto:mirremonta-39@yandex.ru">
+              mirremonta-39@yandex.ru
+            </a>
           </div>
           <div class="contacts__item">
             <svg class="icon" width="24" height="24">
-              <use href="/images/sprite.svg#tg" fill="currentColor"></use>
+              <use href="/images/sprite.svg#tg-black" fill="currentColor"></use>
             </svg>
-            @mirastroy_kaliningrad
+            <a href=""> @mirastroy_kaliningrad</a>
           </div>
           <div class="contacts__item">
             <svg class="icon" width="24" height="24">
               <use href="/images/sprite.svg#geo" fill="currentColor"></use>
             </svg>
-            г. Калининград, Московский пр-т, 174, этаж 3, офис 15
+            <span>г. Калининград, Московский пр-т, 174, этаж 3, офис 15</span>
           </div>
+
         </div>
       </div>
+      <div class="contacts__map">
+        <iframe
+          src="https://yandex.ru/map-widget/v1/?um=constructor%3A3ff121397d0ea2a64f48a25820ffdf3e8570d9e443dd707e61d0b8cdb91adb68&amp;source=constructor"
+          width="552" height="290" frameborder="0"></iframe>
+      </div>
     </div>
-    <div class="contacts__map"></div>
+
   </div>
 </section>
