--- a/templates/dashboard/dashform.html
+++ b/templates/dashboard/dashform.html
@@ -1,4 +1,4 @@
-<div class="dashform">
+<div class="dashform" id="dashform">
   <div class="wrap">
     <div class="dashform__wrapper">
       <div class="dashform__info">
