--- a/templates/dashboard/faq.html
+++ b/templates/dashboard/faq.html
@@ -7,7 +7,7 @@
           Частые вопросы
         </h2>
         <div class="faq__info-text">
-          Если у вас остались вопросы — <a href="">напишите нам</a> .
+          Если у вас остались вопросы — <a href="#dashform">напишите нам</a> .
           Обязательно ответим!
         </div>
       </div>
@@ -46,7 +46,7 @@
             официально. Договор с нами - это юридически сильный грамотный документ.
           </div>
         </div>
-        <a class="faq__action" href="">
+        <a class="faq__action" href="#dashform">
           Задать свой вопрос
         </a>
       </div>
