--- a/templates/dashboard/first.html
+++ b/templates/dashboard/first.html
@@ -4,7 +4,7 @@
     <div class="first__wrapper">
       <div class="first__info">
         <h1 class="first__title">
-          Ремонт квартиры «под ключ»<br /> с мебелью <br /> в Калиниграде <br /> от 45 дней
+          Ремонт квартиры «под&nbsp;ключ» с&nbsp;мебелью в&nbsp;Калининграде от&nbsp;45&nbsp;дней
         </h1>
         <div class="first__list">
           <div class="first__item">
@@ -24,9 +24,9 @@
           </div>
         </div>
         <div class="first__footer">
-          <button class="first__action" type="button">
+          <a href="#dashform" class="first__action">
             Узнать точную смету
-          </button>
+          </a>
           <div class="first__gift">
             + Дизайн-проект в подарок
           </div>
@@ -34,15 +34,11 @@
       </div>
       <div class="first__images">
         <img class="first__images-bg" src="/images/first-screen-border.svg" alt="screen">
-
-
-
-
         <picture>
-          <source srcset="/images/first-screen-1@2x.webp 2x, /images/first-screen-1.webp 1x" media="(max-width: 1240px)"
-            type="image/webp">
-          <source srcset="/images/first-screen-1@2x.png 2x, /images/first-screen-1.png 1x" media="(max-width: 1240px)"
-            type="image/png">
+          <source srcset="/images/first-screen-3-mob@2x.webp 2x, /images/first-screen-3-mob.webp 1x"
+            media="(max-width: 1240px)" type="image/webp">
+          <source srcset="/images/first-screen-3-mob@2x.png 2x, /images/first-screen-3-mob.png 1x"
+            media="(max-width: 1240px)" type="image/png">
           <source srcset="/images/first-screen-3@2x.webp 2x, /images/first-screen-2.webp 1x" type="image/webp">
           <source srcset="/images/first-screen-3@2x.png 2x, /images/first-screen-2.png 1x" type="image/png">
           <img src="/images/first-screen-3.png" class="first__images-three">
@@ -50,20 +46,20 @@
 
 
         <picture>
-          <source srcset="/images/first-screen-1@2x.webp 2x, /images/first-screen-1.webp 1x" media="(max-width: 1240px)"
-            type="image/webp">
-          <source srcset="/images/first-screen-1@2x.png 2x, /images/first-screen-1.png 1x" media="(max-width: 1240px)"
-            type="image/png">
+          <source srcset="/images/first-screen-2-mob@2x.webp 2x, /images/first-screen-2-mob.webp 1x"
+            media="(max-width: 1240px)" type="image/webp">
+          <source srcset="/images/first-screen-2-mob@2x.png 2x, /images/first-screen-2-mob.png 1x"
+            media="(max-width: 1240px)" type="image/png">
           <source srcset="/images/first-screen-2@2x.webp 2x, /images/first-screen-2.webp 1x" type="image/webp">
           <source srcset="/images/first-screen-2@2x.png 2x, /images/first-screen-2.png 1x" type="image/png">
           <img src="/images/first-screen-2.png" class="first__images-two">
         </picture>
 
         <picture>
-          <source srcset="/images/first-screen-1@2x.webp 2x, /images/first-screen-1.webp 1x" media="(max-width: 1240px)"
-            type="image/webp">
-          <source srcset="/images/first-screen-1@2x.png 2x, /images/first-screen-1.png 1x" media="(max-width: 1240px)"
-            type="image/png">
+          <source srcset="/images/first-screen-1-mob@2x.webp 2x, /images/first-screen-1-mob.webp 1x"
+            media="(max-width: 1240px)" type="image/webp">
+          <source srcset="/images/first-screen-1-mob@2x.png 2x, /images/first-screen-1-mob.png 1x"
+            media="(max-width: 1240px)" type="image/png">
           <source srcset="/images/first-screen-1@2x.webp 2x, /images/first-screen-1.webp 1x" type="image/webp">
           <source srcset="/images/first-screen-1@2x.png 2x, /images/first-screen-1.png 1x" type="image/png">
           <img src="/images/first-screen-1.png" class="first__images-one">
