--- a/templates/dashboard/how.html
+++ b/templates/dashboard/how.html
@@ -28,11 +28,12 @@
               </button>
             </div>
             <div class="how__item-main">
-              Составляем официальный договор с фиксированной ценой, сроками и объёмом работ — без размытых формулировок.
-              Каждый этап ремонта, каждая позиция в смете и каждая дата — внесены в договор. Бюджет не меняется. Оплата
-              строго по факту готового результата работ, этап за этапом. Штрафы за срыв сроков оплачиваем мы.
-              Договор подписывается при личной встрече или удаленно с электронной подписью. Весь документооборот ведется
-              официально. Договор с нами - это юридически сильный грамотный документ.
+              <p> Составляем официальный договор с фиксированной ценой, сроками и объёмом работ — без размытых
+                формулировок.
+                Каждый этап ремонта, каждая позиция в смете и каждая дата — внесены в договор. Бюджет не меняется.</p>
+              <p> Составляем официальный договор с фиксированной ценой, сроками и объёмом работ — без размытых
+                формулировок.
+                Каждый этап ремонта, каждая позиция в смете и каждая дата — внесены в договор. Бюджет не меняется.</p>
             </div>
           </div>
         </div>
