--- a/templates/dashboard/reviews.html
+++ b/templates/dashboard/reviews.html
@@ -137,7 +137,7 @@
           красоты благодаря
           грамотному техническому подходу и заменой некоторых материалов.
         </div>
-        <a href="" class="reviews__invite-action">
+        <a href="#dashform" class="reviews__invite-action">
           Оставить заявку
         </a>
       </div>
