--- a/templates/dashboard/why.html
+++ b/templates/dashboard/why.html
@@ -1,6 +1,9 @@
 <section class="why">
   <img class="why__bg" src="/images/light-bg.svg" alt="bg">
   <div class="wrap">
+    <h2 class="why__title-mob">
+      Почему нас выбирают
+    </h2>
     <div class="why__wrapper">
       <div class="why__blog">
         <div class="why__blog-wrapper">
@@ -14,20 +17,19 @@
             </svg>
           </button>
         </div>
-
-        <div class="why__blog-cite">
-          «Я тот человек, который отвечает за ваше спокойствие. Моя задача — чтобы вы ждали ключи, а не переживали»
-        </div>
-        <div class="why__blog-name">
-          Бакланова Виталина, руководитель Мирастрой
+        <div>
+          <div class="why__blog-cite">
+            «Я тот человек, который отвечает за ваше спокойствие. Моя задача — чтобы вы ждали ключи, а не переживали»
+          </div>
+          <div class="why__blog-name">
+            Бакланова Виталина, руководитель Мирастрой
+          </div>
         </div>
       </div>
-
-
       <div class="why__info">
-        <h1 class="why__title">
+        <h2 class="why__title">
           Почему нас выбирают
-        </h1>
+        </h2>
         <div class="why__list">
           <div class="why__item">
             <div class="why__item-title">
@@ -78,9 +80,9 @@
 
         </div>
         <div class="why__footer">
-          <button class="why__action" type="button">
+          <a class="why__action" href="#dashform">
             Ремонт без нервов
-          </button>
+          </a>
         </div>
       </div>
     </div>
