--- a/templates/dashboard/works.html
+++ b/templates/dashboard/works.html
@@ -2,9 +2,9 @@
   <img class="works__bg" src="/images/dark-bg.svg" alt="bg">
   <div class="wrap">
     <div class="works__hdr">
-      <h1 class="works__title">
+      <h2 class="works__title">
         Наши работы
-      </h1>
+      </h2>
       <div class="works__controls">
         <button class="works__controls-prev" type="button">
           <svg class="icon" width="56" height="24">
@@ -228,7 +228,7 @@
           Посетите действующие наши проекты и убедитесь в подходе и качестве работ в ремонте нашей команды. Организуем
           экскурсию в удобное для вас время.
         </div>
-        <a href="" class="works__invite-action">
+        <a href="#dashform" class="works__invite-action">
           Оставить заявку
         </a>
       </div>
