--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,108 +1,68 @@
 <footer class="footer">
   <div class="wrap">
-    <div class="footer__nav">
-      <div class="footer__nav-wrap">
-        <a href="" class="footer__nav-link for-psy"> Вход для психологов </a>
-        <a href="" class="footer__nav-link for-psy"> Регистрация психолога </a>
-        <a href="" class="footer__nav-link"> Каталог психологов </a>
-        <a href="" class="footer__nav-link"> О нас </a>
-        <a href="" class="footer__nav-link"> Контакты </a>
-      </div>
-      <div class="footer__nav-wrap">
-        <a href="" class="footer__nav-link"> Оставить отзыв о сервисе </a>
-        <a href="" class="footer__nav-link"> Оставить отзыв о психологе </a>
-        <a href="" class="footer__nav-link"> Отзывы </a>
-        <a href="" class="footer__nav-link"> Блог </a>
-        <a href="" class="footer__nav-link"> Обратная связь </a>
-      </div>
-      <div class="footer__nav-wrap">
-        <a href="" class="footer__nav-link"> Оставить отзыв о сервисе </a>
-        <a href="" class="footer__nav-link"> Оставить отзыв о психологе </a>
-        <a href="" class="footer__nav-link"> Отзывы </a>
-        <a href="" class="footer__nav-link"> Блог </a>
-        <a href="" class="footer__nav-link"> Обратная связь </a>
-      </div>
-      <div class="footer__help">
-        Если вам требуется срочная психологическая помощь в серьезной или
-        угрожающей жизни ситуации — обратитесь в одну из этих
-        <a href="/">организаций</a>
-      </div>
-    </div>
-    <div class="footer__subnav">
-      <div class="footer__subnav__item">
-        <a href="" class="footer__subnav__link"> Карта сайта </a>
-        <a href="" class="footer__subnav__link">
-          Политика конфиденциальности
+    <div class="footer__wrapper">
+      <div class="footer__box">
+        <a href="" class="footer__logo">
+          <svg class="icon" width="360" height="50">
+            <use href="/images/sprite.svg#logo-footer" fill="currentColor"></use>
+          </svg>
         </a>
-      </div>
-      <div class="footer__subnav__item">
-        <a href="" class="footer__subnav__link"> Карта сайта </a>
-        <a href="" class="footer__subnav__link">
-          Политика конфиденциальности
-        </a>
-      </div>
-      <div class="footer__subnav__item">
-        <a href="" class="footer__subnav__link"> Карта сайта </a>
-        <a href="" class="footer__subnav__link">
-          Политика конфиденциальности
-        </a>
-      </div>
-      <div class="footer__subnav__item">
         <div class="footer__socials">
-          <div class="footer__socials__text">
-            Подписывайтесь на наши <br />
-            cоциальные сети:
-          </div>
-          <a href="" class="footer__socials__item">
-            <svg class="icon" width="40" height="40">
-              <use
-                href="/images/sprite.svg#teleg_social"
-                fill="currentColor"
-              ></use>
+          <a href="" class="footer__socials-link">
+            <svg class="icon" width="24" height="24">
+              <use href="/images/sprite.svg#social-wapp" fill="currentColor"></use>
             </svg>
           </a>
-          <a href="" class="footer__socials__item">
-            <svg class="icon" width="40" height="40">
-              <use
-                href="/images/sprite.svg#vk_social"
-                fill="currentColor"
-              ></use>
+          <a href="" class="footer__socials-link">
+            <svg class="icon" width="24" height="20">
+              <use href="/images/sprite.svg#social-tg" fill="currentColor"></use>
+            </svg>
+          </a>
+          <a href="" class="footer__socials-link">
+            <svg class="icon" width="24" height="14">
+              <use href="/images/sprite.svg#social-vk" fill="currentColor"></use>
             </svg>
           </a>
         </div>
-        <div class="footer__count">
-          <div class="footer__count__text">
-            Количество проведенных консультаций на сате:
-          </div>
-          <div class="footer__count__result">100 000</div>
+      </div>
+      <div class="footer__box">
+        <nav class="footer__nav">
+          <a href="" class="footer__nav-link">
+            о компании
+          </a>
+          <a href="" class="footer__nav-link">
+            Наши работы
+          </a>
+          <a href="" class="footer__nav-link">
+            Контакты
+          </a>
+          <a href="" class="footer__nav-link">
+            услуги
+          </a>
+          <a href="" class="footer__nav-link">
+            Советы
+          </a>
+          <a href="" class="footer__nav-link">
+            Вакансии
+          </a>
+        </nav>
+        <div class="footer__docs">
+          <a href="" class="footer__docs-link">
+            Политика конфиденциальности
+          </a>
+          <a href="" class="footer__docs-link">
+            Пользовательское соглашение
+          </a>
+          <a href="" class="footer__docs-link">
+            Политика использования cookie
+          </a>
         </div>
       </div>
     </div>
-    <div class="footer__inform">
-      <div class="footer__inform-text">
-        <p>
-          ООО «Псичат» ИНН 2222897459, ОГРН 1222200007633, Алтайский край, г.
-          Барнаул, ул. Шумакова 18
-        </p>
-        <p>
-          Под термином «психотерапия» на ресурсе подразумевается психологическое
-          консультирование. Психологи и Психотерапевты не оказывают медицинских
-          услуг на площадке. Термины «Психолог ПсиЧат» и «Психотерапевт ПсиЧат»
-          обозначают партнерство, не подразумевают трудовых отношений
-          специалистов с ООО «ПсиЧат», если иное не указывается прямо.
-        </p>
-      </div>
-      <div class="footer__inform-text">
-        <p>
-          Мы используем cookie-файлы, оставаясь на сайте, вы подтвержадете свое
-          согласие на их использование. © 2020 - 2022 Psy-chat.ru —
-          <a href="">Сервис подбора психолога онлайн</a>.
-        </p>
-        <p>
-          Платежная система:
-          <img src="/images/mir.svg" />
-        </p>
-      </div>
+    <div class="footer__copyrite">
+      Любая информация, представленная на этом сайте, носит исключительно ознакомительный характер, ни при каких
+      обстоятельствах не является публичной офертой, определяемой положениями статьи 437 ГК РФ. Актуальные цены
+      уточняйте у менеджеров компании. © 2025. Все права защищены
     </div>
   </div>
 </footer>
