--- a/templates/header.html
+++ b/templates/header.html
@@ -17,17 +17,28 @@
         +7 (909) 775 12 28
       </a>
 
-      <a href="" target="_blank" class="header__chat">
-        <svg class="icon" width="24" height="24">
+      <a href="#dashform" class="header__chat">
+        <svg class="icon" width="32" height="32">
           <use href="/images/sprite.svg#chat" fill="currentColor"></use>
         </svg>
-        обсудить ремонт
+        <span>
+          обсудить ремонт
+        </span>
       </a>
 
       <button type="button" class="header__burger">
-        меню
-        <svg class="icon" width="24" height="24">
+        <span>
+          меню
+        </span>
+
+        <svg class="icon icon-menu" width="24" height="24">
           <use href="/images/sprite.svg#menu" fill="currentColor"></use>
+        </svg>
+        <svg class="icon icon-close" width="24" height="24">
+          <use href="/images/sprite.svg#close" fill="currentColor"></use>
+        </svg>
+        <svg class="icon icon-close-mob" width="14" height="14">
+          <use href="/images/sprite.svg#close-black" fill="currentColor"></use>
         </svg>
       </button>
 
@@ -39,8 +50,25 @@
           <a href="" class="header__dropdown-link">советы</a>
           <a href="" class="header__dropdown-link">Контакты</a>
         </nav>
+        <div class="header__socials">
+          <a href="" class="header__socials-link">
+            <svg class="icon" width="24" height="24">
+              <use href="/images/sprite.svg#social-wapp" fill="currentColor"></use>
+            </svg>
+          </a>
+          <a href="" class="header__socials-link">
+            <svg class="icon" width="24" height="20">
+              <use href="/images/sprite.svg#social-tg" fill="currentColor"></use>
+            </svg>
+          </a>
+          <a href="" class="header__socials-link">
+            <svg class="icon" width="24" height="14">
+              <use href="/images/sprite.svg#social-vk" fill="currentColor"></use>
+            </svg>
+          </a>
+        </div>
         <div class="header__dropdown-text">
-          Работаем без выходных с 9:00 до 20:00
+          Мы работаем без выходных с 9:00 до 20:00
           Ждем ваших писем и звонков:
         </div>
         <div class="header__dropdown-contact">
@@ -68,7 +96,7 @@
             @mirastroy_kaliningrad
           </a>
         </div>
-        <a href="" class="header__dropdown-action" type="button">
+        <a href="#dashform" class="header__dropdown-action" type="button">
           Оставить заявку
         </a>
       </div>
