--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -2,40 +2,41 @@
 *,
 *::before,
 *::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 // 2. Тактильные стили
 html {
-  -webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: transparent;
+    scroll-behavior: smooth;
 }
 
 a {
-  outline: none;
-  text-decoration: none;
-  color: var(--link);
-  transition: 0.2s;
-  -webkit-tap-highlight-color: transparent;
+    outline: none;
+    text-decoration: none;
+    color: var(--link);
+    transition: 0.2s;
+    -webkit-tap-highlight-color: transparent;
 }
 
 // 3. Кнопки
 button,
 button:active,
 button:focus {
-  outline: none;
+    outline: none;
 }
 
 button {
-  transition: 0.2s;
-  padding: 0;
-  cursor: pointer;
-  background: transparent;
-  border: none;
-  font-size: 16px;
-  line-height: 24px;
-  color: var(--text);
+    transition: 0.2s;
+    padding: 0;
+    cursor: pointer;
+    background: transparent;
+    border: none;
+    font-size: 16px;
+    line-height: 24px;
+    color: var(--text);
 }
 
 // 4. Наследование шрифтов
@@ -43,45 +44,45 @@ button,
 input,
 select,
 textarea {
-  font-family: inherit;
+    font-family: inherit;
 }
 
 // 5. Placeholder
 input::placeholder,
 textarea::placeholder {
-  color: var(--text_gray);
-  font-size: 16px;
-  line-height: 24px;
+    color: var(--text_gray);
+    font-size: 16px;
+    line-height: 24px;
 }
 
 // 6. Формы и поля ввода
 input,
 textarea,
 select {
-  outline: none;
-  color: var(--text);
-  background: var(--bg);
-  -webkit-tap-highlight-color: transparent;
-
-  &:focus {
     outline: none;
-  }
+    color: var(--text);
+    background: var(--bg);
+    -webkit-tap-highlight-color: transparent;
+
+    &:focus {
+        outline: none;
+    }
 }
 
-input[type="search"]::-webkit-search-cancel-button {
-  display: none;
+input[type='search']::-webkit-search-cancel-button {
+    display: none;
 }
 
 input:focus::placeholder,
 textarea:focus::placeholder {
-  color: transparent;
+    color: transparent;
 }
 
 // 7. Изображения
 img {
-  display: block;
-  width: auto;
-  height: auto;
+    display: block;
+    width: auto;
+    height: auto;
 }
 
 // 8. Автозаполнение
@@ -94,88 +95,88 @@ select:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 textarea:-webkit-autofill:focus,
 select:-webkit-autofill:focus {
-  -webkit-text-fill-color: var(--text);
-  -webkit-box-shadow: 0 0 0 1000px transparent inset;
-  transition: background-color 5000s ease-in-out 0s;
-  background: -webkit-linear-gradient(
-    rgba(255, 255, 255, 0) 0%,
-    rgba(0, 174, 255, 0.04) 50%,
-    rgba(255, 255, 255, 0) 51%,
-    rgba(0, 174, 255, 0.03) 100%
-  );
+    -webkit-text-fill-color: var(--text);
+    -webkit-box-shadow: 0 0 0 1000px transparent inset;
+    transition: background-color 5000s ease-in-out 0s;
+    background: -webkit-linear-gradient(
+        rgba(255, 255, 255, 0) 0%,
+        rgba(0, 174, 255, 0.04) 50%,
+        rgba(255, 255, 255, 0) 51%,
+        rgba(0, 174, 255, 0.03) 100%
+    );
 }
 
 // 9. Normalize.css v8.0.1
 html {
-  line-height: 1.15; /* Исправляем высоту строки */
-  -webkit-text-size-adjust: 100%; /* Предотвращаем изменения текста на iOS */
+    line-height: 1.15; /* Исправляем высоту строки */
+    -webkit-text-size-adjust: 100%; /* Предотвращаем изменения текста на iOS */
 }
 
 body {
-  margin: 0; /* Убираем отступ */
+    margin: 0; /* Убираем отступ */
 }
 
 main {
-  display: block; /* Для IE */
+    display: block; /* Для IE */
 }
 
 h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
+    font-size: 2em;
+    margin: 0.67em 0;
 }
 
 hr {
-  box-sizing: content-box;
-  height: 0;
-  overflow: visible;
+    box-sizing: content-box;
+    height: 0;
+    overflow: visible;
 }
 
 pre {
-  font-family: monospace, monospace;
-  font-size: 1em;
+    font-family: monospace, monospace;
+    font-size: 1em;
 }
 
 a {
-  background-color: transparent;
+    background-color: transparent;
 }
 
 abbr[title] {
-  border-bottom: none;
-  text-decoration: underline dotted;
+    border-bottom: none;
+    text-decoration: underline dotted;
 }
 
 b,
 strong {
-  font-weight: bolder;
+    font-weight: bolder;
 }
 
 code,
 kbd,
 samp {
-  font-family: monospace, monospace;
-  font-size: 1em;
+    font-family: monospace, monospace;
+    font-size: 1em;
 }
 
 small {
-  font-size: 80%;
+    font-size: 80%;
 }
 
 sub,
 sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
+    font-size: 75%;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
 }
 sub {
-  bottom: -0.25em;
+    bottom: -0.25em;
 }
 sup {
-  top: -0.5em;
+    top: -0.5em;
 }
 
 img {
-  border-style: none;
+    border-style: none;
 }
 
 button,
@@ -183,93 +184,93 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: inherit;
-  font-size: 100%;
-  line-height: 1.15;
-  margin: 0;
+    font-family: inherit;
+    font-size: 100%;
+    line-height: 1.15;
+    margin: 0;
 }
 
 button,
 input {
-  overflow: visible;
+    overflow: visible;
 }
 
 button,
 select {
-  text-transform: none;
-  -webkit-appearance: button;
+    text-transform: none;
+    -webkit-appearance: button;
 }
 
 button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
+[type='button']::-moz-focus-inner,
+[type='reset']::-moz-focus-inner,
+[type='submit']::-moz-focus-inner {
+    border-style: none;
+    padding: 0;
 }
 
 button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
+[type='button']:-moz-focusring,
+[type='reset']:-moz-focusring,
+[type='submit']:-moz-focusring {
+    outline: 1px dotted ButtonText;
 }
 
 fieldset {
-  padding: 0.35em 0.75em 0.625em;
+    padding: 0.35em 0.75em 0.625em;
 }
 
 legend {
-  box-sizing: border-box;
-  color: inherit;
-  display: table;
-  max-width: 100%;
-  padding: 0;
-  white-space: normal;
+    box-sizing: border-box;
+    color: inherit;
+    display: table;
+    max-width: 100%;
+    padding: 0;
+    white-space: normal;
 }
 
 progress {
-  vertical-align: baseline;
+    vertical-align: baseline;
 }
 
 textarea {
-  overflow: auto;
+    overflow: auto;
 }
 
-[type="checkbox"],
-[type="radio"] {
-  box-sizing: border-box;
-  padding: 0;
+[type='checkbox'],
+[type='radio'] {
+    box-sizing: border-box;
+    padding: 0;
 }
 
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
+[type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-outer-spin-button {
+    height: auto;
 }
 
-[type="search"] {
-  -webkit-appearance: textfield;
-  outline-offset: -2px;
+[type='search'] {
+    -webkit-appearance: textfield;
+    outline-offset: -2px;
 }
 
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
+[type='search']::-webkit-search-decoration {
+    -webkit-appearance: none;
 }
 
 ::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  font: inherit;
+    -webkit-appearance: button;
+    font: inherit;
 }
 
 details {
-  display: block;
+    display: block;
 }
 summary {
-  display: list-item;
+    display: list-item;
 }
 template {
-  display: none;
+    display: none;
 }
 [hidden] {
-  display: none;
+    display: none;
 }
