--- a/src/styles/chunks/_header.scss
+++ b/src/styles/chunks/_header.scss
@@ -6,12 +6,17 @@
     position: sticky;
     top: 0;
     z-index: 5;
+
     &__box {
         display: flex;
         align-items: center;
-        padding: 18px 0;
-        gap: 40px;
+        padding: 8px 0;
+        gap: 33px;
         position: relative;
+        @include mixins.respond-max(tablet) {
+            gap: 28px;
+            height: 60px;
+        }
     }
 
     &__city {
@@ -20,11 +25,17 @@
         color: var(--ltext);
         text-transform: uppercase;
         @include mixins.type(12, 20);
+        @include mixins.respond-max(tablet) {
+            display: none;
+        }
     }
 
     &__logo {
         flex-shrink: 0;
         display: flex;
+        @include mixins.respond-max(tablet) {
+            margin-right: auto;
+        }
     }
 
     &__phone,
@@ -34,12 +45,79 @@
         align-items: center;
         gap: 8px;
         text-transform: uppercase;
+        padding: 7px 0;
+        padding-left: 12px;
         @include mixins.type(12, 20);
+        @include mixins.respond-max(tablet) {
+            padding-left: 0;
+        }
         & .icon {
             flex-shrink: 0;
         }
         &:hover {
             opacity: 0.8;
+        }
+        & .icon-menu {
+            display: block;
+        }
+        & .icon-close-mob {
+            display: none;
+        }
+        & .icon-close {
+            display: none;
+            @include mixins.respond-max(tablet) {
+                display: none;
+            }
+        }
+        &.open {
+            border-color: var(--main);
+            & .icon-menu {
+                display: none;
+            }
+            & .icon-close {
+                display: block;
+                @include mixins.respond-max(tablet) {
+                    display: none;
+                }
+            }
+            & .icon-close-mob {
+                @include mixins.respond-max(tablet) {
+                    display: block;
+                }
+            }
+        }
+    }
+
+    &__burger {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 3px solid var(--bg);
+        border-radius: 8px;
+        padding-left: 12px;
+        width: 85px;
+        height: 44px;
+        @include mixins.respond-max(tablet) {
+            width: 34px;
+            height: 34px;
+            padding: 10px;
+            & span {
+                display: none;
+            }
+        }
+    }
+
+    &__phone {
+        @include mixins.respond-max(tablet) {
+            display: none;
+        }
+    }
+
+    &__chat {
+        & span {
+            @include mixins.respond-max(tablet) {
+                display: none;
+            }
         }
     }
     &__dropdown {
@@ -53,7 +131,19 @@
         border-bottom-left-radius: 16px;
         border-bottom-right-radius: 16px;
         display: none;
-        &.show {
+        @include mixins.respond-max(tablet) {
+            position: fixed;
+            top: 60px;
+            left: 0;
+            bottom: 0;
+            width: 100vw;
+            border-radius: 0;
+            padding: 40px 0;
+            background: #383838e5;
+            overflow-y: auto;
+            overscroll-behavior: contain;
+        }
+        &.active {
             display: block;
         }
         &-nav {
@@ -61,12 +151,21 @@
             grid-template-columns: 1fr 1fr;
             grid-gap: 16px 40px;
             margin-bottom: 40px;
+            @include mixins.respond-max(tablet) {
+                display: block;
+            }
         }
         &-link {
             color: var(--bg);
             font-weight: bold;
             text-transform: uppercase;
             @include mixins.type(14, 20);
+            @include mixins.respond-max(tablet) {
+                display: block;
+                margin-bottom: 24px;
+                padding: 0 60px;
+                width: fit-content;
+            }
             &:hover {
                 color: var(--main);
             }
@@ -75,12 +174,20 @@
             color: var(--bg);
             margin-bottom: 8px;
             @include mixins.type(14, 20);
+            @include mixins.respond-max(tablet) {
+                padding: 40px 20px 0;
+                border-top: 1px solid #ffffff33;
+                margin-bottom: 16px;
+            }
         }
         &-contact {
             display: flex;
             color: var(--bg);
             margin-bottom: 8px;
             gap: 16px;
+            @include mixins.respond-max(tablet) {
+                padding: 0 20px;
+            }
             & .icon {
                 flex-shrink: 0;
             }
@@ -92,6 +199,28 @@
         &-action {
             margin-top: 30px;
             @include mixins.btn();
+        }
+    }
+
+    &__socials {
+        display: none;
+        @include mixins.respond-max(tablet) {
+            display: flex;
+            align-items: center;
+            gap: 24px;
+            margin-top: 30px;
+            margin-bottom: 60px;
+            padding: 0 60px;
+
+            &-link {
+                width: 48px;
+                height: 48px;
+                border: 1px solid #ffe500;
+                border-radius: 8px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
         }
     }
 }
