--- a/src/styles/chunks/dashboard/_comand.scss
+++ b/src/styles/chunks/dashboard/_comand.scss
@@ -3,6 +3,12 @@
 .comand {
     padding: 80px 0 100px 0;
     position: relative;
+    @include mixins.respond-max(tablet) {
+        padding: 40px 0 150px 0;
+        & .wrap {
+            padding: 0;
+        }
+    }
     &__bg {
         position: absolute;
         top: 0;
@@ -10,18 +16,28 @@
         right: 0;
         width: 100%;
         z-index: -1;
+        @include mixins.respond-max(tablet) {
+            height: 280px;
+            object-fit: cover;
+        }
     }
     &__hdr {
         display: flex;
         align-items: center;
         justify-content: space-between;
         margin-bottom: 40px;
+        position: relative;
+        @include mixins.respond-max(tablet) {
+            margin-bottom: 32px;
+            padding: 0 20px;
+        }
     }
 
     &__slider {
         display: flex;
-        // width: 100vw;
-        // padding-right: 24px;
+        @include mixins.respond-max(tablet) {
+            padding: 0 20px;
+        }
     }
 
     &__item {
@@ -30,10 +46,18 @@
         width: 360px;
         overflow: hidden;
         position: relative;
+        @include mixins.respond-max(tablet) {
+            width: 306px;
+            height: 408px;
+        }
 
         &-image {
             width: 360px;
             height: 100%;
+            @include mixins.respond-max(tablet) {
+                width: 306px;
+                height: 408px;
+            }
         }
 
         &-footer {
@@ -61,6 +85,9 @@
         display: flex;
         align-items: center;
         gap: 24px;
+        @include mixins.respond-max(tablet) {
+            display: none;
+        }
         &-prev {
             transform: rotate(180deg);
             display: flex;
@@ -85,10 +112,19 @@
         margin-left: auto;
         margin-top: 100px;
         text-align: right;
+        @include mixins.respond-max(tablet) {
+            margin: 40px 20px 0;
+            text-align: left;
+            flex-direction: column;
+            padding: 30px 30px 142px;
+        }
         &-title {
             font-family: mixins.$font-secondary;
             margin-bottom: 16px;
             @include mixins.type(32, 36);
+            @include mixins.respond-max(tablet) {
+                @include mixins.type(26, 30);
+            }
         }
 
         &-list {
@@ -103,6 +139,9 @@
             justify-content: flex-end;
             // align-items: center;
             gap: 16px;
+            @include mixins.respond-max(tablet) {
+                flex-direction: row-reverse;
+            }
             & .icon {
                 display: flex;
                 flex-shrink: 0;
@@ -117,11 +156,19 @@
                 width: fit-content;
                 margin-left: auto;
                 @include mixins.type(14, 18);
+                @include mixins.respond-max(tablet) {
+                    padding-left: 0;
+                    padding-right: 0;
+                    width: 100%;
+                }
             }
         }
         &-info {
             margin-left: auto;
             padding-left: 490px;
+            @include mixins.respond-max(tablet) {
+                padding: 0;
+            }
         }
         &-img {
             position: absolute;
@@ -129,6 +176,15 @@
             top: -20px;
             width: 520px;
             height: 390px;
+            @include mixins.respond-max(tablet) {
+                width: 255px;
+                height: 186px;
+                position: absolute;
+                left: 50%;
+                transform: translateX(-50%);
+                top: auto;
+                bottom: -80px;
+            }
         }
     }
 }
