--- a/src/styles/chunks/dashboard/_faq.scss
+++ b/src/styles/chunks/dashboard/_faq.scss
@@ -5,12 +5,19 @@
     width: 100%;
     position: relative;
     background: #f0f0f0;
+    @include mixins.respond-max(tablet) {
+        padding: 40px 0;
+    }
     &__bg {
         position: absolute;
         top: 0;
         left: 0;
         right: 0;
         width: 100%;
+        @include mixins.respond-max(tablet) {
+            height: 280px;
+            object-fit: cover;
+        }
     }
 
     &__wrapper {
@@ -18,11 +25,20 @@
         grid-template-columns: 300px 1fr;
         grid-gap: 84px;
         position: relative;
+        @include mixins.respond-max(tablet) {
+            display: block;
+        }
     }
 
     &__info {
         &-title {
             margin-bottom: 16px;
+        }
+
+        &-text {
+            & a {
+                text-decoration: underline;
+            }
         }
     }
 
@@ -31,6 +47,9 @@
         flex-direction: column;
         gap: 24px;
         counter-reset: my-counter;
+        @include mixins.respond-max(tablet) {
+            margin-top: 32px;
+        }
     }
 
     &__item {
@@ -39,6 +58,9 @@
         border-radius: 16px;
         background: #f0f0f0;
         position: relative;
+        @include mixins.respond-max(tablet) {
+            padding: 20px;
+        }
         &.active {
             border-color: var(--bg);
             background: var(--bg);
@@ -55,7 +77,6 @@
         &-hdr {
             font-family: mixins.$font-secondary;
             display: flex;
-
             gap: 20px;
             justify-content: space-between;
             cursor: pointer;
@@ -65,6 +86,15 @@
         &-main {
             color: #9a9a9a;
             display: none;
+            @include mixins.respond-max(tablet) {
+                color: #4f4f4f;
+            }
+            & p {
+                margin-bottom: 10px;
+                &:last-child {
+                    margin: 0;
+                }
+            }
         }
     }
 
