--- a/src/styles/chunks/dashboard/_first.scss
+++ b/src/styles/chunks/dashboard/_first.scss
@@ -5,6 +5,10 @@
     padding-bottom: 80px;
     width: 100%;
     position: relative;
+    @include mixins.respond-max(tablet) {
+        padding-top: 50px;
+        padding-bottom: 40px;
+    }
     &__bg {
         position: absolute;
         top: 0;
@@ -12,6 +16,10 @@
         right: 0;
         width: 100%;
         z-index: -1;
+        @include mixins.respond-max(tablet) {
+            height: 280px;
+            object-fit: cover;
+        }
     }
 
     &__wrapper {
@@ -19,6 +27,9 @@
         grid-template-columns: 1fr 1fr;
         grid-gap: 32px;
         position: relative;
+        @include mixins.respond-max(tablet) {
+            display: block;
+        }
     }
 
     &__info {
@@ -26,11 +37,23 @@
         border-right: 3px solid var(--main);
         border-bottom-right-radius: 16px;
         padding-right: 220px;
+        @include mixins.respond-max(tablet) {
+            padding: 0;
+            border: none;
+            position: relative;
+            z-index: 4;
+        }
     }
 
     &__title {
         max-width: 520px;
         margin-bottom: 24px;
+        @include mixins.respond-max(tablet) {
+            // max-width: 235px;
+            & br {
+                display: none;
+            }
+        }
     }
 
     &__list {
@@ -40,16 +63,21 @@
     &__item {
         margin-bottom: 8px;
         display: flex;
-        align-items: center;
         gap: 18px;
         padding-left: 5px;
         @include mixins.type(18, 26);
+        @include mixins.respond-max(tablet) {
+            @include mixins.type(16, 24);
+            padding-left: 0;
+            gap: 12px;
+        }
         &::before {
             content: '';
             display: block;
             width: 5px;
             height: 5px;
             border: 1px solid var(--text);
+            margin-top: 10px;
         }
     }
 
@@ -57,6 +85,10 @@
         display: flex;
         align-items: center;
         margin-bottom: -35px;
+        @include mixins.respond-max(tablet) {
+            flex-direction: column;
+            margin: 0;
+        }
     }
 
     &__action {
@@ -66,8 +98,10 @@
             padding-right: 68px;
             white-space: nowrap;
             height: 72px;
-
-            // width: auto;
+            @include mixins.respond-max(tablet) {
+                padding-left: 0;
+                padding-right: 0;
+            }
         }
     }
 
@@ -78,16 +112,44 @@
         white-space: nowrap;
         height: 50px;
         background: var(--bg);
+        @include mixins.respond-max(tablet) {
+            border-top: none;
+            border-left: 1px solid #383838;
+        }
     }
 
     &__images {
         position: relative;
+        @include mixins.respond-max(tablet) {
+            z-index: -1;
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 100%;
+            height: 300px;
+            &::before {
+                content: '';
+                width: 100%;
+                height: 100%;
+                background: rgba(255, 255, 255, 0.5);
+                position: absolute;
+                z-index: 4;
+                display: block;
+                top: -40px;
+            }
+        }
 
         &-bg {
             position: absolute;
             right: 0;
             width: 100%;
             min-width: 552px;
+            @include mixins.respond-max(tablet) {
+                min-width: auto;
+                width: 160px;
+                height: 130px;
+                top: -20px;
+            }
         }
 
         &-one,
@@ -97,6 +159,9 @@
             border-radius: 16px;
             box-shadow: 0px 0px 16px 0px #3838383d;
             animation: zIndexLoop 9s infinite;
+            @include mixins.respond-max(tablet) {
+                border-radius: 4px;
+            }
         }
 
         /* Позиции */
@@ -106,6 +171,12 @@
             width: 552px;
             height: 380px;
             animation-delay: 0s;
+            @include mixins.respond-max(tablet) {
+                width: 164px;
+                height: 112px;
+                top: 10px;
+                right: 30px;
+            }
         }
 
         &-two {
@@ -114,6 +185,13 @@
             width: 380px;
             height: 476px;
             animation-delay: 3s;
+            @include mixins.respond-max(tablet) {
+                width: 120px;
+                height: 150px;
+                top: 10px;
+                right: 40px;
+                // display: none;
+            }
         }
 
         &-three {
@@ -122,6 +200,13 @@
             width: 496px;
             height: 348px;
             animation-delay: 6s;
+            @include mixins.respond-max(tablet) {
+                width: 164px;
+                height: 112px;
+                top: -12px;
+                right: 8px;
+                // right: auto;
+            }
         }
 
         /* Анимация по z-index */
