--- a/src/styles/chunks/dashboard/_why.scss
+++ b/src/styles/chunks/dashboard/_why.scss
@@ -5,12 +5,19 @@
     width: 100%;
     position: relative;
     background: #f0f0f0;
+    @include mixins.respond-max(tablet) {
+        padding: 40px 0;
+    }
     &__bg {
         position: absolute;
         top: 0;
         left: 0;
         right: 0;
         width: 100%;
+        @include mixins.respond-max(tablet) {
+            height: 280px;
+            object-fit: cover;
+        }
     }
 
     &__wrapper {
@@ -18,16 +25,36 @@
         grid-template-columns: 328px 1fr;
         grid-gap: 80px;
         position: relative;
+        @include mixins.respond-max(tablet) {
+            display: block;
+        }
     }
 
     &__title {
         margin-bottom: 40px;
+        @include mixins.respond-max(tablet) {
+            display: none;
+        }
+    }
+
+    &__title-mob {
+        display: none;
+        @include mixins.respond-max(tablet) {
+            display: block;
+            position: relative;
+            margin-bottom: 32px;
+        }
     }
 
     &__list {
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-gap: 24px 40px;
+        @include mixins.respond-max(tablet) {
+            grid-template-columns: 1fr;
+            grid-gap: 24px;
+            margin-top: 32px;
+        }
     }
 
     &__item {
@@ -39,6 +66,9 @@
         }
         &:last-child {
             grid-column: 1/3;
+            @include mixins.respond-max(tablet) {
+                grid-column: 1/1;
+            }
         }
     }
 
@@ -54,12 +84,21 @@
     }
 
     &__blog {
+        @include mixins.respond-max(tablet) {
+            display: flex;
+            flex-direction: row-reverse;
+            gap: 16px;
+            align-items: center;
+        }
         &-wrapper {
             position: relative;
             display: flex;
             align-items: center;
             justify-content: center;
             margin-bottom: 24px;
+            @include mixins.respond-max(tablet) {
+                margin: 0;
+            }
         }
         &-video {
             width: 100%;
@@ -68,12 +107,24 @@
             border-radius: 16px;
             object-fit: cover; // обрезает края, сохраняя пропорции
             background: #000;
+            @include mixins.respond-max(tablet) {
+                width: 140px;
+                border-radius: 8px;
+            }
         }
         &-play {
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+            @include mixins.respond-max(tablet) {
+                width: 56px;
+                height: 56px;
+                & .icon {
+                    width: 56px;
+                    height: 56px;
+                }
+            }
         }
 
         &-cite {
