--- a/src/styles/mixins/_mixins.scss
+++ b/src/styles/mixins/_mixins.scss
@@ -46,6 +46,9 @@ $root-font-size: 16 !default; // предполагаем, что html { font-si
     font-weight: bold;
     height: 56px;
     border: 3px solid transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     @include type(14, 20);
 
     &:hover {
